Added tests for services and controllers

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,22 +1,25 @@
-# Use H2 in-memory database for testing
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
-# Dummy values for placeholders from main app
-JAWSDB_URL=jdbc:mysql://localhost:3306/fake_db
-PORT=8080
+# Enable H2 console for debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# JWT Configuration (dummy key and expiration)
-jwt.secret=test-jwt-secret
+# JWT configuration for tests
+jwt.secret=testSecretKeyThatIsLongEnoughForJWTSigningInTestEnvironment
 jwt.expiration=86400000
 
-# Security logging (optional for test output)
-logging.level.org.springframework.security=ERROR
-logging.level.com.example.demo=ERROR
+# Disable security for tests
+spring.security.user.name=test
+spring.security.user.password=test
+
+# Enable SQL logging for debugging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Set active profile
+spring.profiles.active=test
