--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,24 +2,17 @@ spring.application.name=demo
 
 # If we ever need to change database or soemthing happens we just need to swtich these valeuus
 # host, port, database
-#spring.datasource.url=${JAWSDB_URL}
-#spring.datasource.url=jdbc:mysql://w1kxmddo6gwskajy:gz7hw2zaf411smo1@qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bqajhqlf21wkqv48
-spring.datasource.username=w1kxmddo6gwskajy
-spring.datasource.password=gz7hw2zaf411smo1
-# username of database
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${JAWSDB_URL}
 
-spring.datasource.url=jdbc:mysql://qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bqajhqlf21wkqv48
-spring.datasource.url=jdbc:mysql://qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bqajhqlf21wkqv48
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bqajhqlf21wkqv48
 
 # username of database
-spring.datasource.username=w1kxmddo6gwskajy
-spring.datasource.username=w1kxmddo6gwskajy
+#spring.datasource.username=w1kxmddo6gwskajy
 # password of database
-spring.datasource.password=gz7hw2zaf411smo1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=gz7hw2zaf411smo1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=gz7hw2zaf411smo1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=${PORT:8080}
 
